# scrippt-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-old  Makefile  Makefile.toml  README.md  azure-pipelines.yml  docker-compose.dev.yml  pdf.out
.github/ISSUE_TEMPLATE/: to-do-request.md
.github/workflows/: continuous_integration.yaml  main_scrippt.yml  push_acr.yaml  rust.yml  rust_ci.yml
k8s/: deployment.yml  service.yml
manifests/: deployment.yml  service.yml
public/css/: navbar.css
server/: Cargo.toml
server/keys/: .jwk
server/src/: account_handlers.rs  db.rs  jwt.rs  lib.rs  main.rs  models.rs  profile_handlers.rs  repository.rs  utils.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs  user_auth.rs  utils.rs
server/src/handlers/: account_handlers.rs  document_handlers.rs  generate_handlers.rs  mod.rs  profile_handlers.rs  types.rs
server/src/middleware/: auth.rs
server/src/models/: account.rs  document.rs  generate.rs  mod.rs  profile.rs  traits.rs  user.rs
server/src/repository/: account_repository.rs  database.rs  db.rs  mod.rs  profile_repository.rs
server/src/utils/: openai.rs  sendgrid.rs
server/src/website/: routes.rs
server/templates/: index.hbs  navbar.hbs
server/tests/: test_account.rs
src/: account_handlers.rs  handlers.rs  lib.rs  main.rs  prompts.rs  routes.rs
src/ai/: ai.rs  error.rs  mod.rs  response.rs
src/auth/: jwt.rs  mod.rs  user_auth.rs
src/generate/: ai.rs
src/handlers/: account_handlers.rs  document_handlers.rs  generate_handlers.rs  mod.rs  profile_handlers.rs  types.rs
src/models/: document.rs  mod.rs  profile.rs  traits.rs  user.rs
src/models/document/: document.rs  mod.rs  traits.rs
src/models/profile/: education.rs  experience.rs  mod.rs  profile.rs  skills.rs  traits.rs
src/models/user/: account.rs  mod.rs  user.rs
src/prompts/: parser.prompt  response.prompt
src/repository/: account_repository.rs  database.rs  db.rs  redis.rs
src/utils/: mod.rs  openai.rs  prompt.rs  sendgrid.rs  validation.rs
static/css/: index.css  navbar.css
static/html/: index.html
static/templates/: index.hbs  index.html  navbar.hbs
tests/: test_account.rs  test_profile.rs
