[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "2"
actix-files = "0.6.0"
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bson = "2.5.0"
actix-service = "1.0.1"
log = "0.4.14"
env_logger = "0.10.0"
jsonwebtoken = "8.0.0"
rust-argon2 = "1.0"
rand = "0.8.3"
handlebars = { version = "4.3.6", features = ["dir_source"] }

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"] 