[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-rt = "2.8.0"
actix-http = "3.3.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mongodb = "2.3.1"
bson = "2.5.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
jsonwebtoken = "8.0.0"
env_logger = "0.10.0"
futures = "0.3.1"
log = "0.4.14"
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
rust-argon2 = "1.0"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
email-address-parser = "1.0.3"
rand = "0.8.3"
sendgrid = { version = "0.18.1", features = ["async"] }
async-openai = "0.9.4"

[dev-dependencies]
more-asserts = "0.3.1"
assert-json-diff = "2.0.2"

[[bin]]
name = "server"
path = "src/main.rs"